# kdlfmt

./: .pre-commit-hooks.yaml  .prettierignore  CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  action.yml  dist-workspace.toml  justfile  kdlfmt.kdl  mdsf.json  mise.toml  readme-command-help.py
.github/: dependabot.yml
.github/workflows/: kdlfmt.yml  release-crates.yml  release.yml  validate.yml
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  error.rs  fs.rs  main.rs
cli/src/commands/: check.rs  completions.rs  format.rs  init.rs  mod.rs
cli/src/terminal/: mod.rs
cli/tests/: check.rs  completions.rs  format.rs  help.rs  init.rs  main.rs
cli/wix/: main.wxs
github-action/: biome.json  package-lock.json  package.json
github-action/src/: index.mjs
src/: cli.rs  config.rs  error.rs  fs.rs  kdl.rs  main.rs  terminal.rs
src/commands/: check.rs  completions.rs  format.rs  init.rs  mod.rs
src/terminal/: logging.rs  mod.rs
