[workspace]
members = ["cli"]
exclude = []
resolver = "3"

[workspace.package]
version = "0.0.17"
edition = "2024"
description = "A code formatter for kdl documents."
authors = ["Mads Hougesen <mads@mhouge.dk>"]
license = "MIT"
repository = "https://github.com/hougesen/kdlfmt"
keywords = ["kdl", "formatter", "pretty-printing", "code-formatter"]
homepage = "https://github.com/hougesen/kdlfmt?tab=readme-ov-file"
documentation = "https://github.com/hougesen/kdlfmt#readme"
readme = "README.md"
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
assert_cmd = "2.0.17"
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.50"
clap_complete_nushell = "4.5.5"
console = "0.15.11"
ec4rs = "1.2.0"
env_logger = "0.11.8"
ignore = "0.4.23"
kdl = { version = "6.3.4", features = ["v1"] }
log = "0.4.27"
miette = { version = "7.6.0", features = ["fancy"] }
predicates = "3.1.3"
tempfile = "3.20.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
