[workspace]
resolver = "3"
members = ["cli"]
exclude = []

[workspace.package]
version = "0.1.4"
authors = ["Mads Hougesen <mads@mhouge.dk>"]
edition = "2024"
description = "A code formatter for kdl documents."
documentation = "https://github.com/hougesen/kdlfmt#readme"
readme = "README.md"
homepage = "https://github.com/hougesen/kdlfmt?tab=readme-ov-file"
repository = "https://github.com/hougesen/kdlfmt"
license = "MIT"
keywords = ["code-formatter", "formatter", "kdl", "pretty-printing"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
assert_cmd = "2.0.17"
clap = { version = "4.5.50", features = ["derive"] }
clap_complete = "4.5.59"
clap_complete_nushell = "4.5.8"
console = "0.16.1"
ec4rs = "1.2.0"
env_logger = "0.11.8"
ignore = "0.4.24"
kdl = { version = "6.5.0", features = ["v1"] }
log = "0.4.28"
miette = { version = "7.6.0", features = ["fancy"] }
predicates = "3.1.3"
tempfile = "3.23.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
